Trying to fix dark mode

--- a/restaurantID/stock.css
+++ b/restaurantID/stock.css
@@ -7,6 +7,7 @@ body {
 }
 
 .dark-mode {
+	background-color: white;
 	background-image: url("../graphics/main_texture.jpg");
 	background-repeat: repeat;
 	overflow: hidden;
